sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe entity identifier.
 */
typedef uint64_t GoudEntityId;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Base code for context/initialization errors.
 */
#define CONTEXT_ERROR_BASE 1
/**
 * Base code for resource/asset errors.
 */
#define RESOURCE_ERROR_BASE 100
/**
 * Removes the same component type from multiple entities in a single batch.
 */
uint32_t goud_component_remove_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash);
/**
 * Checks if multiple entities have a specific component type.
 */
uint32_t goud_component_has_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, uint8_t *out_results);
/**
 * Removes a component from an entity.
 */
GoudResult goud_component_remove(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Creates a default Transform2D at the origin with no rotation and unit scale.
 */
struct FfiTransform2D goud_transform2d_default(void);
/**
 * Creates a Transform2D at the specified position with default rotation and scale.
 */
struct FfiTransform2D goud_transform2d_from_position(float x, float y);
/**
 * Creates a Transform2D at the origin with the specified rotation.
 */
struct FfiTransform2D goud_transform2d_from_rotation(float rotation);
/**
 * Creates a Transform2D at the origin with the specified rotation in degrees.
 */
struct FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);
/**
 * Creates a Transform2D at the origin with the specified scale.
 */
struct FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);
/**
 * Creates a Transform2D with uniform scale.
 */
struct FfiTransform2D goud_transform2d_from_scale_uniform(float scale);
/**
 * Creates a Transform2D with position and rotation.
 */
struct FfiTransform2D goud_transform2d_from_position_rotation(float x, float y, float rotation);
/**
 * Creates a Transform2D with all components specified.
 */
struct FfiTransform2D goud_transform2d_new(float pos_x, float pos_y, float rotation, float scale_x, float scale_y);
/**
 * Creates a Transform2D looking at a target position.
 */
struct FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);
/**
 * Translates the transform by the given offset in world space.
 */
void goud_transform2d_translate(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Translates the transform in local space.
 */
void goud_transform2d_translate_local(struct FfiTransform2D *transform, float dx, float dy);