sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Removes the same component type from multiple entities in a single batch.
        ///
        ///  This is more efficient than calling `goud_component_remove()` multiple times.
        ///  Invalid entities or entities without the component are skipped.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context containing the entities
        ///  * `entity_ids` - Pointer to array of entity IDs
        ///  * `count` - Number of entities
        ///  * `type_id_hash` - Hash of the component type
        ///
        ///  # Returns
        ///
        ///  The number of entities that successfully had the component removed.
        ///
        ///  # Safety
        ///
        ///  Caller must ensure `entity_ids` points to valid memory with `count` u64 values.
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `RESOURCE_ERROR_BASE + 100` (ResourceNotFound) - Component type not registered
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = { e1, e2, e3, e4, e5 };
        ///  fixed (ulong* ePtr = entities) {
        ///      int removed = goud_component_remove_batch(
        ///          contextId, ePtr, 5, positionTypeId
        ///      );
        ///      Console.WriteLine($"Removed components from {removed} entities");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_remove_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_component_remove_batch(GoudContextId context_id, ulong* entity_ids, uint count, ulong type_id_hash);

        /// <summary>
        ///  Checks if multiple entities have a specific component type.
        ///
        ///  Results are written to the `out_results` array, where each entry is:
        ///  - `1` (true) if the entity has the component
        ///  - `0` (false) if the entity doesn't have the component or is invalid
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to check
        ///  * `entity_ids` - Pointer to array of entity IDs
        ///  * `count` - Number of entities
        ///  * `type_id_hash` - Hash of the component type
        ///  * `out_results` - Pointer to array where results will be written (size = count)
        ///
        ///  # Returns
        ///
        ///  The number of results written (should equal `count` on success).
        ///
        ///  # Safety
        ///
        ///  Caller must ensure:
        ///  - `entity_ids` points to valid memory with `count` u64 values
        ///  - `out_results` points to valid memory with `count` u8 values
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `RESOURCE_ERROR_BASE + 100` (ResourceNotFound) - Component type not registered
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = { e1, e2, e3, e4, e5 };
        ///  byte[] results = new byte[5];
        ///  fixed (ulong* ePtr = entities)
        ///  fixed (byte* rPtr = results) {
        ///      int count = goud_component_has_batch(
        ///          contextId, ePtr, 5, positionTypeId, rPtr
        ///      );
        ///      for (int i = 0; i &lt; count; i++) {
        ///          Console.WriteLine($"Entity {i}: {results[i] != 0}");
        ///      }
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_has_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_component_has_batch(GoudContextId context_id, ulong* entity_ids, uint count, ulong type_id_hash, byte* out_results);

        /// <summary>
        ///  Creates a default Transform2D at the origin with no rotation and unit scale.
        ///
        ///  # Returns
        ///
        ///  A Transform2D with position (0, 0), rotation 0, and scale (1, 1).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_default();

        /// <summary>
        ///  Creates a Transform2D at the specified position with default rotation and scale.
        ///
        ///  # Parameters
        ///
        ///  - `x`: X position in world space
        ///  - `y`: Y position in world space
        ///
        ///  # Returns
        ///
        ///  A Transform2D with the specified position, rotation 0, and scale (1, 1).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_position(float x, float y);

        /// <summary>
        ///  Creates a Transform2D at the origin with the specified rotation.
        ///
        ///  # Parameters
        ///
        ///  - `rotation`: Rotation angle in radians (counter-clockwise)
        ///
        ///  # Returns
        ///
        ///  A Transform2D with position (0, 0), the specified rotation, and scale (1, 1).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_rotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_rotation(float rotation);

        /// <summary>
        ///  Creates a Transform2D at the origin with the specified rotation in degrees.
        ///
        ///  # Parameters
        ///
        ///  - `degrees`: Rotation angle in degrees (counter-clockwise)
        ///
        ///  # Returns
        ///
        ///  A Transform2D with position (0, 0), the specified rotation, and scale (1, 1).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_rotation_degrees", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);

        /// <summary>
        ///  Creates a Transform2D at the origin with the specified scale.
        ///
        ///  # Parameters
        ///
        ///  - `scale_x`: Scale along X axis
        ///  - `scale_y`: Scale along Y axis
        ///
        ///  # Returns
        ///
        ///  A Transform2D with position (0, 0), rotation 0, and the specified scale.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_scale", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);

        /// <summary>
        ///  Creates a Transform2D with uniform scale.
        ///
        ///  # Parameters
        ///
        ///  - `scale`: Uniform scale factor for both axes
        ///
        ///  # Returns
        ///
        ///  A Transform2D with position (0, 0), rotation 0, and uniform scale.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_scale_uniform", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_scale_uniform(float scale);

        /// <summary>
        ///  Creates a Transform2D with position and rotation.
        ///
        ///  # Parameters
        ///
        ///  - `x`: X position in world space
        ///  - `y`: Y position in world space
        ///  - `rotation`: Rotation angle in radians
        ///
        ///  # Returns
        ///
        ///  A Transform2D with the specified position and rotation, with scale (1, 1).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_from_position_rotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_from_position_rotation(float x, float y, float rotation);

        /// <summary>
        ///  Creates a Transform2D with all components specified.
        ///
        ///  # Parameters
        ///
        ///  - `pos_x`: X position in world space
        ///  - `pos_y`: Y position in world space
        ///  - `rotation`: Rotation angle in radians
        ///  - `scale_x`: Scale along X axis
        ///  - `scale_y`: Scale along Y axis
        ///
        ///  # Returns
        ///
        ///  A fully specified Transform2D.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_new(float pos_x, float pos_y, float rotation, float scale_x, float scale_y);

        /// <summary>
        ///  Creates a Transform2D looking at a target position.
        ///
        ///  The transform's forward direction (positive X after rotation)
        ///  will point towards the target.
        ///
        ///  # Parameters
        ///
        ///  - `pos_x`: X position of the transform
        ///  - `pos_y`: Y position of the transform
        ///  - `target_x`: X position of the target to look at
        ///  - `target_y`: Y position of the target to look at
        ///
        ///  # Returns
        ///
        ///  A Transform2D positioned at (pos_x, pos_y) looking towards (target_x, target_y).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_look_at", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);

        /// <summary>
        ///  Translates the transform by the given offset in world space.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `dx`: X offset to translate by
        ///  - `dy`: Y offset to translate by
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer to a FfiTransform2D
        ///  - The caller must ensure exclusive access to the transform
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_translate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_translate(FfiTransform2D* transform, float dx, float dy);

        /// <summary>
        ///  Translates the transform in local space.
        ///
        ///  The offset is rotated by the transform's rotation before being applied.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `dx`: X offset in local space
        ///  - `dy`: Y offset in local space
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_translate_local", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_translate_local(FfiTransform2D* transform, float dx, float dy);
